@@ -17,6 +17,7 @@
   * Upgraded the lsl.reader.drsu module to work with larger file count LWAFS
   * Added a ls-style script, lsDRSU.py, to list the contents of a DRSU
   * Added a glob-style function to the DRSU module
+  * Added an array-geometry correction to the correlator to phase up on zenith
 
 0.4.4.1
   * Fixed the missing cable attenuation parameters in the SSMIF
